syntax = "proto3";

package mpl_token_metadata;

message MplTokenMetadataBlockEvents {
    repeated MplTokenMetadataTransactionEvents transactions = 1;
}

message MplTokenMetadataTransactionEvents {
    string signature = 1;
    repeated MplTokenMetadataEvent events = 2;
}

message MplTokenMetadataEvent {
    oneof event {
        CreateMetadataAccountV3Event create_metadata_account_v3 = 1;
    }
}

message CreateMetadataAccountV3Event {
    string metadata = 1;
    string mint = 2;
    string update_authority = 3;
    DataV2 data = 4;
    bool is_mutable = 5;
    optional CollectionDetails collection_details = 6;
}

message DataV2 {
    string name = 1;
    string symbol = 2;
    string uri = 3;
    uint32 seller_fee_basis_points = 4;
    repeated Creator creators = 5;
    optional Collection collection = 6;
    optional Uses uses = 7;
}

message Uses {
    UseMethod use_method = 1;
    uint64 remaining = 2;
    uint64 total = 3;
}

enum UseMethod {
    NULL = 0;
    BURN = 1;
    MULTIPLE = 2;
    SINGLE = 3;
}

message Collection {
    bool verified = 1;
    string key = 2;
}

message CollectionDetails {
    oneof version {
        CollectionDetailsV1 v1 = 1;
        CollectionDetailsV2 v2 = 2;
    }
}

message CollectionDetailsV1 {
    uint64 size = 1;
}

message CollectionDetailsV2 {
    repeated uint64 padding = 1;
}

message Creator {
    string address = 1;
    bool verified = 2;
    uint32 share = 3;
}
